--- a/default.htm
+++ b/default.htm
@@ -8,7 +8,8 @@
 </head>
 <body>
     <form action="http://localhost:5000/login" meathos = "post">
-    <p><input type="text" name="nm"/></p>
+    <p>Enter your name</p>
+        <p><input type="text" name="nm"/></p>
     <p><input type="button"name="btn" value="submit"</p>
     </form>
 </body>
