--- a/default.htm
+++ b/default.htm
@@ -7,6 +7,11 @@
     <title>Welcome!</title>
 </head>
 <nav>
+    <ul class="nav">
+        <li><a href="default.htm">Home</a></li>
+        <li><a href="Shirts.htm">Shirts</a></li>
+        <li><a href="inventory.htm">Inventory</a></li>
+      </ul>
 
 </nav>
 <body>
