--- a/inventory.htm
+++ b/inventory.htm
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whats in stock?</title>
 </head>
-<nav></nav>
+<nav>
+    <ul class="nav">
+        <li><a href="default.htm">Home</a></li>
+        <li><a href="Shirts.htm">Shirts</a></li>
+        <li><a href="inventory.htm">Inventory</a></li>
+      </ul>
+</nav>
 <body>
     {% for row in row %}
     <p>{{row row["name"] }}</p>
